# 2DGame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Plan.txt
2DGame/: 2DGame.cpp  2DGame.h  CMakeLists.txt  copy-assets.cmake
2DGame/EngineCore/: CMakeLists.txt  WindowSDL.cpp
2DGame/Game/: CMakeLists.txt  Game.cpp  Game.h
2DGame/Game/Buttons/: Button.cpp  Button.h  CMakeLists.txt
2DGame/Game/States/: CMakeLists.txt  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  SettingsState.h  StateBase.h  StateHandler.cpp  StateHandler.h  StateList.h  StateMain.h
Assets/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/EngineCore/: AnimatedSprite.h  CMakeLists.txt  EventFacade.cpp  EventFacade.h  Font.h  FontHandler.cpp  FontHandler.h  ImageContainer.h  Input.cpp  Input.h  Renderable.h  RenderableFactory.h  Renderer.cpp  Renderer.h  RendererFacade.h  SHDebug.cpp  SHDebug.h  Sprite.cpp  Sprite.h  SpriteInfo.h  TextRenderable.h  TextureHandler.cpp  TextureHandler.h  WindowSDL.cpp  WindowSDL.h
Engine/EngineCore/Events/: CMakeLists.txt  Event.h  ObserverFont.h  ObserverSprite.h  ReverseObserver.cpp  ReverseObserver.h  ReverseSubject.cpp  ReverseSubject.h  SubjectFont.cpp  SubjectFont.h  SubjectSprite.cpp  SubjectSprite.h
Engine/EngineCore/RenderableInfo/: CMakeLists.txt  FontInfo.h  InfoBase.h  RenderLayer.h  RenderType.h  SpriteInfo.h
Engine/EngineCore/Renderables/: AnimatedSprite.cpp  CMakeLists.txt  Renderable.h  Sprite.h  TextRenderable.cpp  TextRenderable.h
Engine/EngineCore/Renderer/: CMakeLists.txt  FontHandler.cpp  FontHandler.h  FontInfoHandler.cpp  FontInfoHandler.h  ImageContainer.h  RenderableFactory.h  Renderer.cpp  Renderer.h  TextureHandler.cpp  TextureHandler.h  TextureInfoHandler.cpp  TextureInfoHandler.h
Engine/EngineMath/: CMakeLists.txt  Range.h  Transform2D.cpp  Transform2D.h
SDL2/: CMakeLists.txt
SDL2_image/: CMakeLists.txt
SDL2_ttf/: CMakeLists.txt
SH_Test/: CMakeLists.txt  SHMath_Test.cpp  SHRender_Test.cpp  SHWindow_Test.cpp  SH_Test.cpp  SH_Test_Math.cpp  copy-assets.cmake
